--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:; default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
     <link href="./styles.css" rel="stylesheet">
     <title>Snaptext</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <h1>Image captured</h1>
+    <div id="preview-image"></div>
+    <h1>Preprocessed image</h1>
+    <div id="preview-pre-image"></div>
+    <h1>Text captured</h1>
+    <div id="text-captured"></div>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
