--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Snaptext</title>
   </head>
   <body>
-    <h1>Image captured</h1>
+    <h1>Screenshot an image for the text on it to be copied to the clipboard...</h1>
     <div id="preview-image"></div>
-
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
