--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:; default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
     <link href="./styles.css" rel="stylesheet">
-    <title>Snaptext</title>
+    <title>SnapText</title>
   </head>
   <body>
     <h1>Screenshot an image for the text on it to be copied to the clipboard...</h1>
